--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
     <version>0.0.1-SNAPSHOT</version>
     <name>SpringBootExample</name>
     <description>SpringBootExample</description>
+    <packaging>jar</packaging>
     <properties>
         <java.version>1.8</java.version>
     </properties>
@@ -55,6 +56,7 @@
                 </configuration>
             </plugin>
         </plugins>
+        <finalName>docker-demo</finalName>
     </build>
 
 </project>
